--- a/index.html
+++ b/index.html
@@ -319,12 +319,12 @@
             <div id='treemapreview' class="card-body"></div>
             <div class="card-footer small text-muted">Updated in <span></span></div>
           </div>
-          <div class="card mb-3">
+          <!--div class="card mb-3">
             <div class="card-header"><i class="fa fa-map"></i> Map of Requirements Cluster by States</div>
             <div id='clustermap' class="card-body col-sm-12 my-auto" ></div>
-                <!--div id="container" style="height: 600px; min-width: 310px; max-width: 980px; margin: 0 auto"></div-->
+                <!--div id="container" style="height: 600px; min-width: 310px; max-width: 980px; margin: 0 auto"></div>
             <div class="card-footer small text-muted">Updated in <span></span></div>
-          </div>
+          </div-->
         </div>
 
         <div class="col-lg-4">
@@ -332,6 +332,12 @@
             <div class="card-header">
               <i class="fa fa-pie-chart"></i> Recommends </div>
             <div id='pierecommend' class="card-body"></div>
+            <div class="card-footer small text-muted">Updated in <span></span></div>
+          </div>
+          <div class="card mb-3">
+            <div class="card-header">
+              <i class="fa fa-pie-chart"></i> Recommends Predict </div>
+            <div id='piepredrecommend' class="card-body"></div>
             <div class="card-footer small text-muted">Updated in <span></span></div>
           </div>
         </div>        
